# o2tk

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.gitlab/issue_templates/: Bug.md  Documentation.md  FeatureRequest.md  Maintence.md
.gitlab/merge_request_templates/: MergeRequest.md
src/: core.rs  enums.rs  lib.rs  oml.rs  prelude.rs  traits.rs  utils.rs  widgets.rs
src/core/: color.rs  enums.rs  prelude.rs  theme.rs  traits.rs  widgets.rs
src/core/enums/: orientation.rs  position.rs  run.rs  size.rs  widgets.rs
src/core/traits/: button.rs  dock.rs  text.rs  widget.rs
src/core/widgets/: button.rs  container.rs  dock.rs  label.rs  toolbar.rs  window.rs  window_container.rs
src/enums/: orientation.rs  position.rs  run.rs  size.rs  widgets.rs
src/shaders/: fs.glsl  vs.glsl
src/traits/: dock.rs  text.rs  widget.rs
src/utils/: color.rs  fs.glsl  theme.rs  vs.glsl
src/widgets/: bar.rs  container.rs  dock.rs  window.rs  window_container.rs
tests/: bar_test.rs  color_test.rs  container_100_100_test.rs  container_25_75_test.rs  container_50_50_test.rs  container_75_25_test.rs  dock_100_test.rs  dock_25_test.rs  dock_50_test.rs  dock_75_test.rs  utils.rs
